# shellrun

./: .gitignore  CMakeLists.txt  README.md  asm.h  config.h.in  main.c  main.cpp  main.h  shellcode.txt  util.h
.github/workflows/: build_cmake_windows.yml  ccpp.yml  cmake-msys.yml
ShellcodeExamples/: build.bat  build.sh
ShellcodeExamples/Linux/X86/: HelloWorld.asm
ShellcodeExamples/Linux/x64/: HelloWorld.asm
ShellcodeExamples/Linux/x86/: HelloWorld.asm
ShellcodeExamples/Linux/x861/: HelloWorld.asm
ShellcodeExamples/Windows/x64/: HelloWorld.asm
ShellcodeExamples/Windows/x86/: MessageBox.asm  test.asm  test.txt
